--- a/WindowsFormsApplication1/app.config
+++ b/WindowsFormsApplication1/app.config
@@ -26,6 +26,6 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="bigqueryConnectionString" connectionString="XpoProvider=BigQuery;PrivateKeyFileName=zymosimeter-e34a09c6f230.p12;ProjectID=zymosimeter;DataSetId=testdata;ServiceAccountEmail=227277881286-l0fodnq2h35m58b80up9vi4g83p1ogus@developer.gserviceaccount.com" />
+    <add name="bigqueryConnectionString" connectionString="XpoProvider=BigQuery;PrivateKeyFileName=..\..\..\zymosimeter-e34a09c6f230.p12;ProjectID=zymosimeter;DataSetId=testdata;ServiceAccountEmail=227277881286-l0fodnq2h35m58b80up9vi4g83p1ogus@developer.gserviceaccount.com" />
   </connectionStrings>
 </configuration>
