change p12 file name

--- a/BigQueryProvider/App.config
+++ b/BigQueryProvider/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="bigqueryConnectionString" connectionString="PrivateKeyFileName=..\..\..\zymosimeter-e34a09c6f230.p12;ProjectID=zymosimeter;DataSetId=testdata;ServiceAccountEmail=227277881286-l0fodnq2h35m58b80up9vi4g83p1ogus@developer.gserviceaccount.com" />
+    <add name="bigqueryConnectionString" connectionString="PrivateKeyFileName=..\..\..\p12key.p12;ProjectID=zymosimeter;DataSetId=testdata;ServiceAccountEmail=227277881286-l0fodnq2h35m58b80up9vi4g83p1ogus@developer.gserviceaccount.com" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
