--- a/BigQueryProvider/DevExpress.DataAccess.BigQuery.csproj
+++ b/BigQueryProvider/DevExpress.DataAccess.BigQuery.csproj
@@ -143,6 +143,7 @@
     <Compile Include="BigQueryException.cs" />
     <Compile Include="BigQueryParameter.cs" />
     <Compile Include="BigQueryParameterCollection.cs" />
+    <Compile Include="Native\DataStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\BigQueryCommandTests.cs" />
     <Compile Include="Tests\BigQueryConnectionTests.cs" />
