--- a/BigQueryProvider/DevExpress.DataAccess.BigQuery.csproj
+++ b/BigQueryProvider/DevExpress.DataAccess.BigQuery.csproj
@@ -145,7 +145,9 @@
     <Compile Include="BigQueryParameterCollection.cs" />
     <Compile Include="Native\DataStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests\BigQueryCommandTests.cs" />
+    <Compile Include="Tests\BigQueryCommandTestsBase.cs" />
+    <Compile Include="Tests\BigQueryCommandTestsOAuth.cs" />
+    <Compile Include="Tests\BigQueryCommandTestsP12.cs" />
     <Compile Include="Tests\BigQueryConnectionTests.cs" />
     <Compile Include="Tests\BigQueryTests.cs" />
     <Compile Include="Tests\ConnectionStringHelper.cs" />
