--- a/BigQueryProvider/DevExpress.DataAccess.BigQuery.csproj
+++ b/BigQueryProvider/DevExpress.DataAccess.BigQuery.csproj
@@ -149,7 +149,9 @@
     <Compile Include="Tests\BigQueryCommandTestsOAuth.cs" />
     <Compile Include="Tests\BigQueryCommandTestsP12.cs" />
     <Compile Include="Tests\BigQueryConnectionTests.cs" />
-    <Compile Include="Tests\BigQueryTests.cs" />
+    <Compile Include="Tests\BigQueryTestsBase.cs" />
+    <Compile Include="Tests\BigQueryTestsOAuth.cs" />
+    <Compile Include="Tests\BigQueryTestsP12.cs" />
     <Compile Include="Tests\ConnectionStringHelper.cs" />
     <Compile Include="Tests\DataTableComparer.cs" />
   </ItemGroup>
