--- a/BigQueryProvider/DevExpress.DataAccess.BigQuery.csproj
+++ b/BigQueryProvider/DevExpress.DataAccess.BigQuery.csproj
@@ -146,9 +146,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\BigQueryCommandTests.cs" />
     <Compile Include="Tests\BigQueryConnectionTests.cs" />
+    <Compile Include="Tests\BigQueryParametersCollectionTests.cs" />
+    <Compile Include="Tests\BigQueryParameterTests.cs" />
     <Compile Include="Tests\BigQueryTests.cs" />
     <Compile Include="Tests\ConnStringHelper.cs" />
     <Compile Include="Tests\DataTableComparer.cs" />
+    <Compile Include="TypeConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
