--- a/BigQueryProvider/DevExpress.DataAccess.BigQuery.csproj
+++ b/BigQueryProvider/DevExpress.DataAccess.BigQuery.csproj
@@ -149,18 +149,15 @@
     <Compile Include="Tests\BigQueryCommandTestsOAuth.cs" />
     <Compile Include="Tests\BigQueryCommandTestsP12.cs" />
     <Compile Include="Tests\BigQueryConnectionTests.cs" />
-
     <Compile Include="Tests\BigQueryParametersCollectionTests.cs" />
     <Compile Include="Tests\BigQueryParameterTests.cs" />
-    <Compile Include="TypeConverter.cs" />
-
+    <Compile Include="BigQueryTypeConverter.cs" />
     <Compile Include="Tests\BigQueryTestsBase.cs" />
     <Compile Include="Tests\BigQueryTestsOAuth.cs" />
     <Compile Include="Tests\BigQueryTestsP12.cs" />
     <Compile Include="Tests\ConnectionStringHelper.cs" />
     <Compile Include="Tests\DataTableComparer.cs" />
     <Compile Include="Tests\TestingInfrastructureHelper.cs" />
-
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
