--- a/BigQueryProvider/DevExpress.DataAccess.BigQuery.nuspec
+++ b/BigQueryProvider/DevExpress.DataAccess.BigQuery.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>DevExpress.DataAccess.BigQuery</id>
-    <version>[1.0.5.$build.number$]</version>
+    <version>1.0.5.0</version>
     <title>DevExpress.DataAccess.BigQuery</title>
     <authors>DevExpress</authors>
     <owners>DevExpress</owners>
