--- a/BigQueryProvider/App.config
+++ b/BigQueryProvider/App.config
@@ -28,6 +28,22 @@
 
       </dependentAssembly>
 
+      <dependentAssembly>
+
+        <assemblyIdentity name="Google.Apis.Core" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
+
+        <bindingRedirect oldVersion="0.0.0.0-1.9.3.19379" newVersion="1.9.3.19379" />
+
+      </dependentAssembly>
+
+      <dependentAssembly>
+
+        <assemblyIdentity name="Google.Apis.PlatformServices" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
+
+        <bindingRedirect oldVersion="0.0.0.0-1.9.2.27818" newVersion="1.9.2.27818" />
+
+      </dependentAssembly>
+
     </assemblyBinding>
 
   </runtime>
