--- a/BigQueryProvider/App.config
+++ b/BigQueryProvider/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="bigqueryConnectionStringP12" connectionString="PrivateKeyFileName=..\..\..\p12key.p12;ProjectID=zymosimeter;DataSetId=testdata;ServiceAccountEmail=227277881286-o2po60n0veon9u14qgni5uql53iclfip@developer.gserviceaccount.com" />
-    <add name="bigqueryConnectionStringOAuth" connectionString="ProjectID=zymosimeter;DataSetId=testdata;OAuthClientId=227277881286-i4lgbkbod57avtak8qjgmiq49lqksqua.apps.googleusercontent.com;OAuthClientSecret=4fx0BTT22J3jQljMZxW3taoH;OAuthRefreshToken=1/G7-tcnzlcfu65UrkpOvIiEiSo16RnbsAx3p4WMymqA0" />
+    <add name="bigqueryConnectionStringP12" connectionString="PrivateKeyFileName=..\..\..\p12key.p12;ProjectID=projectID;DataSetId=dataSetId;ServiceAccountEmail=serviceAccountEmail" />
+    <add name="bigqueryConnectionStringOAuth" connectionString="ProjectID=projectID;DataSetId=dataSetId;OAuthClientId=oAuthClientId;OAuthClientSecret=oAuthClientSecret;OAuthRefreshToken=oAuthRefreshToken" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
