--- a/BigQueryProvider/DevExpress.DataAccess.BigQuery.nuspec
+++ b/BigQueryProvider/DevExpress.DataAccess.BigQuery.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>DevExpress.DataAccess.BigQuery</id>
-    <version>1.0.6.0</version>
+    <version>1.0.7.0</version>
     <title>DevExpress.DataAccess.BigQuery</title>
     <authors>DevExpress</authors>
     <owners>DevExpress</owners>
@@ -10,16 +10,16 @@
     <projectUrl>https://github.com/DevExpress/BigQueryProvider</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Google BigQuery ADO.NET provider</description>
-    <releaseNotes>Bug fixes and improvements</releaseNotes>
     <copyright>Copyright 2015</copyright>
     <tags>DevExpress Google BigQuery</tags>
     <dependencies>
       <group>
-        <dependency id="Google.Apis.Bigquery.v2" version="1.9.2.2240" />
+        <dependency id="Google.Apis.Bigquery.v2" version="1.9.2.2270" />
       </group>
     </dependencies>
   </metadata>
   <files>
+    <file src="bin\$configuration$\DevExpress.DataAccess.BigQuery.dll" target="lib\net45\" />
     <file src="bin\$configuration$\DevExpress.DataAccess.BigQuery.pdb" target="lib\net45\" />
   </files>
 </package>
