--- a/BigQueryProvider/DevExpress.DataAccess.BigQuery.nuspec
+++ b/BigQueryProvider/DevExpress.DataAccess.BigQuery.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>DevExpress.DataAccess.BigQuery</id>
-    <version>1.1.0.0</version>
+    <version>1.2.0.0</version>
     <title>DevExpress.DataAccess.BigQuery</title>
     <authors>DevExpress</authors>
     <owners>DevExpress</owners>
@@ -10,11 +10,11 @@
     <projectUrl>https://github.com/DevExpress/BigQueryProvider</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Google BigQuery ADO.NET provider</description>
-    <copyright>Copyright 2015</copyright>
+    <copyright>Copyright 2015-2017</copyright>
     <tags>DevExpress Google BigQuery</tags>
     <dependencies>
       <group>
-        <dependency id="Google.Apis.Bigquery.v2" version="1.9.2.2430" />
+        <dependency id="Google.Apis.Bigquery.v2" version="1.20.0.699" />
       </group>
     </dependencies>
   </metadata>
