Support authentication using the JSON key file

--- a/BigQueryProvider/App.config
+++ b/BigQueryProvider/App.config
@@ -2,6 +2,7 @@
 <configuration>
   <connectionStrings>
     <add name="bigqueryConnectionStringP12" connectionString="PrivateKeyFileName=..\..\..\p12key.p12;ProjectID=projectID;DataSetId=dataSetId;ServiceAccountEmail=serviceAccountEmail" />
+    <add name="bigqueryConnectionStringJson" connectionString="PrivateKeyFileName=..\..\..\key.json;ProjectID=projectID;DataSetId=dataSetId;ServiceAccountEmail=serviceAccountEmail" />
     <add name="bigqueryConnectionStringOAuth" connectionString="ProjectID=projectID;DataSetId=dataSetId;OAuthClientId=oAuthClientId;OAuthClientSecret=oAuthClientSecret;OAuthRefreshToken=oAuthRefreshToken" />
   </connectionStrings>
   <startup>
