--- a/BigQueryProvider/DevExpress.DataAccess.BigQuery.csproj
+++ b/BigQueryProvider/DevExpress.DataAccess.BigQuery.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Native\ObjectUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\BigQueryCommandTestsBase.cs" />
+    <Compile Include="Tests\BigQueryCommandTestsJson.cs" />
     <Compile Include="Tests\BigQueryCommandTestsOAuth.cs" />
     <Compile Include="Tests\BigQueryCommandTestsP12.cs" />
     <Compile Include="Tests\BigQueryConnectionTests.cs" />
